tests/paczka1/fuzzy1/83995684.err
Error in line 2: VVd9MVuL A681 30,5
Error in line 1: rb91yQkF S945 84,0
Error in line 6: rb91yQkF A441 33,4
Error in line 10: rb91yQkF S945 80,7
Error in line 15: S945 S48 41,1
Error in line 16: S945 S945 92,0
Error in line 5: JpTrf S48 20,4
Error in line 20: XjCMFCmZb0 S48 4,0
Error in line 19: JpTrf S945 53,5
Error in line 35: XjCMFCmZb0 A441 14,7
